# streamlit-pinecone

./: LICENSE  README.md  app.py  make_dataframe.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
connections/: pinecone_conn.py
demo/: app.py  make_dataframe.py  requirements.txt
env/: pyvenv.cfg
src/streamlit_pinecone/: __init__.py  pinecone_conn.py
